<resources>
    <string name="app_name">Schneider</string>
    <string name="loading_3dots">Loading…</string>
    <string name="language_letter">ع</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="receiving">Receiving</string>
    <string name="inspection">Inspection</string>
    <string name="put_away">Put away</string>
    <string name="audit">Audit</string>
    <string name="report">Report</string>
    <string name="po_vendor">PO Vendor</string>
    <string name="po_plant">PO Factory</string>
    <string name="receiving_report">Receiving report</string>
    <string name="issue">Issue</string>
    <string name="_return">Return</string>
    <string name="main_menu">Main menu</string>
    <string name="receiving_menu">Receiving menu</string>
    <string name="search">Search</string>
    <string name="invoice_number">Invoice number</string>
    <string name="start_receiving">Start Receiving</string>
    <string name="details">Details</string>
    <string name="material_code">Item Code</string>
    <string name="qty">Quantity</string>
    <string name="serial_no">Serial no.</string>
    <string name="inspect">Inspect</string>
    <string name="save">Save</string>
    <string name="received_list">Received List</string>
    <string name="shipped_quantity">Shipped quantity</string>
    <string name="received_qty">Received quantity</string>
    <string name="wrong_material_code">Wrong Item Code!</string>
    <string name="wrong_serial_no">Wrong serial no!</string>
    <string name="serial_added_before">Serial added before</string>
    <string name="rejected_quantity">Rejected quantity</string>
    <string name="please_enter_rejected_qty">Please enter rejected quantity!</string>
    <string name="please_enter_valid_rejected_qty">Please enter valid rejected quantity!</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="cancel">Cancel</string>
    <string name="po_invoice_list">PO Invoice list</string>
    <string name="start_inspection">Start inspection</string>
    <string name="work_order_issue">Work order issue</string>
    <string name="transfer">Transfer</string>
    <string name="issue_report">Issue report</string>
    <string name="start_issue">Start issue</string>
    <string name="issued_qty">Issued qty</string>
    <string name="issue_menu">Issue menu</string>
    <string name="wrong_bin_code">Wrong bin code</string>
    <string name="start_audit">Start audit</string>
    <string name="start_put_away">Start put away</string>
    <string name="audit_list">Audit list</string>
    <string name="received_quantity">Received quantity</string>
    <string name="start_return">Start return</string>
    <string name="return_qty">Return qty</string>
    <string name="returned_serial_no">Returned serial no</string>
    <string name="return_reason">Return reason</string>
    <string name="rejected_serial_no">Rejected serial no</string>
    <string name="counted_qty">Counted qty</string>
    <string name="accepted_qty">Accepted Qty</string>
    <string name="box_number">Box number</string>
    <string name="invoice_details">Invoice details</string>
    <string name="error_in_getting_data">Error in getting data!</string>
    <string name="please_scan_or_select_material_first">Please scan or select item first!</string>
    <string name="please_enter_received_quantity">Please enter received quantity!</string>
    <string name="please_enter_valid_received_quantity">Please enter valid received Quantity!</string>
    <string name="please_scan_serials">Please scan serials!</string>
    <string name="please_scan_serial">Please scan serial!</string>
    <string name="wrong_box_number">Wrong box number!</string>
    <string name="plant">Factory</string>
    <string name="warehouse">Warehouse</string>
    <string name="please_select_plant">Please select Factory!</string>
    <string name="please_select_warehouse">Please select warehouse</string>
    <string name="please_enter_ip_address">Please enter ip address</string>
    <string name="wrong_ip">Wrong ip</string>
    <string name="please_enter_issued_quantity">Please enter issued quantity</string>
    <string name="bin_code">Bin code</string>
    <string name="work_order_number">Work order number</string>
    <string name="project_no">Project No</string>
    <string name="project_from">Project from</string>
    <string name="project_to">Project to</string>
    <string name="please_scan_or_enter_bin_code">Please scan or enter bin code</string>
    <string name="issue_quantity_must_be_less_or_equal_to">Issue quantity must be less than or equal to</string>
    <string name="please_scan_all_serials">Please scan all serials!</string>
    <string name="put_away_qty">Put away qty</string>
    <string name="please_enter_put_away_qty">Please enter put away qty!</string>
    <string name="put_away_qty_must_contains_only_digits">Put away qty must contains only digits!</string>
    <string name="put_away_qty_must_be_less_or_equal_to">Put away qty must be less than or equal to</string>
    <string name="please_enter_return_quantity">Please enter return quantity!</string>
    <string name="please_enter_valid_quantity">Please enter valid quantity!</string>
    <string name="return_quantity_must_be_less_or_equal_to">Return quantity must be less than or equal to</string>
    <string name="please_scan_or_enter_material_code">Please scan or enter Item Code</string>
    <string name="please_scan_valid_bin_code">Please scan valid bin code!</string>
    <string name="please_scan_valid_material_code">Please scan valid Item Code!</string>
    <string name="please_enter_qty">Please enter qty!</string>
    <string name="po_vendor_invoice_list">PO vendor invoice list</string>
    <string name="please_enter_invoice_number">Please enter invoice number!</string>
    <string name="please_enter_user_name">Please enter user name!</string>
    <string name="please_enter_password">Please enter password!</string>
    <string name="po_no">PO No</string>
    <string name="so_no">SO No</string>
    <string name="all_serials_are_scanned">All serials are scanned!</string>
    <string name="receive">Receive</string>
    <string name="received_per_shipped">Received per shipped</string>
    <string name="rejected">Rejected</string>
    <string name="sign_out">Sign out</string>
    <string name="return_menu">Return menu</string>
    <string name="work_order_details_list">Work order details list</string>
    <string name="work_order_list">Work Order list</string>
    <string name="issue_work_order_details_list">Issue work order details list</string>
    <string name="please_select_return_reason">Please select return reason!</string>
    <string name="item_info">Item Info</string>
    <string name="please_scan_item_code">Please scan item code!</string>
    <string name="stock_quantity">Stock quantity</string>
    <string name="bin_info">Bin info</string>
    <string name="po_vendor_menu">PO Vendor menu</string>
    <string name="change_serials_qty">Change Serials/Quantity</string>
    <string name="mrn">MRN</string>
    <string name="declaration_no">Declaration no</string>
    <string name="rejection_reason">Rejection reason</string>
    <string name="this_user_doesn_t_have_the_authority_to_select_item_code_please_scan_it">This user doesn\'t have the authority to select item code,\n Please scan it!</string>
    <string name="this_user_doesn_t_have_the_authority_to_enter_item_code_please_scan_it">This user doesn\'t have the authority to enter item code,\n Please scan it</string>
    <string name="all_quantity_is_already_scanned">All quantity is already scanned!</string>
    <string name="please_select_rejection_reason">Please select rejection reason</string>
    <string name="the_selected_item_is_not_serialized_item_please_select_serialized_item">The selected item is not serialized item,Please select serialized item!</string>
    <string name="remove">Remove</string>
    <string name="no_serials_to_update">No serials to update!</string>
    <string name="start_changing_serials">Start changing serials</string>
    <string name="can_not_change_generated_serials">Can not change generated serials!</string>
    <string name="the_selected_item_is_serialized_item_please_select_unserialized_item">The selected item is serialized item, Please select unserialized item.</string>
    <string name="start_changing_qty">Start changing quantity</string>
    <string name="change_qty">Change quantity</string>
    <string name="can_not_change_qty">Can\'t change quantity!</string>
    <string name="all_qty_are_scanned">All quantity are scanned!</string>
    <string name="please_enter_quantity">Please enter quantity!</string>
    <string name="put_away_per_received">Put away / Received</string>
    <string name="received_per_returned_qty">Received / Returned quantity</string>
    <string name="bill_of_lading_no">Bill of lading no.</string>
    <string name="please_scan_same_serial">Please scan same serial!</string>
    <string name="detailed_put_away">Detailed put away</string>
    <string name="fast_put_away">Fast put away</string>
    <string name="select_all">Select all</string>
    <string name="please_select_items_to_put_away">Please select items to put away!</string>
    <string name="serial_info">Serial info</string>
    <string name="serial_received_before">Serial received before</string>
    <string name="serial_already_put_away">Serial already put away</string>
    <string name="serial_already_rejected">Serial already rejected</string>
    <string name="po_factory_menu">PO Factory menu</string>
    <string name="ready_for_put_away">Ready for put away</string>
    <string name="this_serial_is_issued_before">This serial is issued before</string>
    <string name="main_warehouse">Main warehouse</string>
    <string name="intermediate_warehouse">Intermediate warehouse</string>
    <string name="no_work_orders">No Work Orders</string>
    <string name="serial_already_scanned">Serial already scanned</string>
    <string name="serial_already_received">Serial already received</string>
    <string name="error_in_saving_data">Error in saving data</string>
    <string name="please_scan_received_serials">Please scan received serials!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="production">Production</string>
    <string name="spare_parts">Spare parts</string>
    <string name="intermediate_warehouse_return_menu">Intermediate warehouse return menu</string>
    <string name="max_quantity_is">"Max quantity is "</string>
    <string name="change_serials">Change serials</string>
</resources>