<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Ui.Menus.MainWarehouseMenuFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/receiving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cornerRadius="20dp"
        android:text="@string/receiving" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/issue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cornerRadius="20dp"
        android:text="@string/issue" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/return_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cornerRadius="20dp"
        android:text="@string/_return" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/audit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cornerRadius="20dp"
        android:text="@string/audit" />


</LinearLayout>