<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Ui.Issue.IssueMenuFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/work_order_issue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cornerRadius="20dp"
        android:text="@string/work_order_issue" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cornerRadius="20dp"
        android:text="@string/transfer" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/issue_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cornerRadius="20dp"
        android:text="@string/issue_report" />

</LinearLayout>