<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:animateLayoutChanges="true"
    android:background="@drawable/invoice_item_background"
    android:padding="16dp"
    android:paddingBottom="4dp">

    <TextView
        android:id="@+id/work_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="test"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/invoice_icon"
        android:text="@string/work_order_number"
        app:layout_constraintBottom_toBottomOf="@+id/work_order_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/work_order_number" />

    <TextView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/project_icon_png_8"
        android:text="@string/project_no"
        app:layout_constraintBottom_toBottomOf="@+id/project_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/project_number" />

    <TextView
        android:id="@+id/project_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/work_order_number" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_put_away"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/start_put_away"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/details"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_number" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/details"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/start_put_away"
        app:layout_constraintTop_toTopOf="@+id/start_put_away" />

    <View
        android:id="@+id/line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/start_put_away"
        app:layout_constraintStart_toEndOf="@+id/start_put_away"
        app:layout_constraintTop_toTopOf="@id/start_put_away" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/buttons_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="start_put_away,details,line" />
</androidx.constraintlayout.widget.ConstraintLayout>